@@ -72,14 +72,22 @@
 		  <signal name="button_press_event" handler="id3_info" last_modification_time="Sun, 28 Mar 2004 10:40:25 GMT"/>
 
 		  <child>
-		    <widget class="GtkImage" id="entry_image">
-		      <property name="height_request">23</property>
+		    <widget class="GtkEventBox" id="eventbox_entry">
 		      <property name="visible">True</property>
-		      <property name="xalign">0</property>
-		      <property name="yalign">0.5</property>
-		      <property name="xpad">0</property>
-		      <property name="ypad">0</property>
-		      <signal name="size_allocate" handler="title_size_allocate" last_modification_time="Thu, 01 Jul 2004 21:29:25 GMT"/>
+		      <property name="visible_window">True</property>
+		      <property name="above_child">False</property>
+
+		      <child>
+			<widget class="GtkImage" id="entry_image">
+			  <property name="height_request">23</property>
+			  <property name="visible">True</property>
+			  <property name="xalign">0</property>
+			  <property name="yalign">0.5</property>
+			  <property name="xpad">0</property>
+			  <property name="ypad">0</property>
+			  <signal name="size_allocate" handler="title_size_allocate" last_modification_time="Thu, 01 Jul 2004 21:29:25 GMT"/>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 		</widget>
